--- a/doc/api-spec/v1.yaml
+++ b/doc/api-spec/v1.yaml
@@ -202,6 +202,10 @@ definitions:
           Timestamp of last update.
 
           Required if push-type transport doesn't do timestamping or self-contained metrics snapshot is desired (example: pushing metric updates via queue)
+      interval:
+        type: number
+        description: >-
+          Interval of updates. Should be same as interval of sending events (in case of push-based metrics), or be used by poller to determine how often to poll for new data
       metrics:
         description: >-
           Map of application metrics named hierarchically with dot(`.`) as delimiter. Should be in {app}.{component}.{subcomponent(s)}.{name} format for example:
